# curve-fitting

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
.github/workflows/: release.yml
curve_fitting/: __init__.py  fitting.py
curve_fitting/optimize/: __init__.py  dict.py  fitness.py  optimizer.py  options.py  pycma.py  registry.py  result.py  scipy.py
tests/: test_curve_fitting.py
