[build-system]
requires = ["setuptools", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "curve-fitting"
description = "Curve fitting tool"
authors = [
    {name = "Hailin Wang", email = "hailin.wang@connect.polyu.hk"},
]
dependencies = [
    "cma",
    "numpy",
    "pydantic",
    "scipy",
    "sympy",
    "typing-extensions",
]
requires-python = ">=3.8"
readme = "README.md"
dynamic = ["version"]
license = {text = "MIT"}

[tool.setuptools.packages.find]
namespaces = false

[tool.pdm]
package-type = "library"

[tool.setuptools_scm]
root = "."
version_scheme = "post-release"
fallback_version = "0.0.1"
